--- a/conf/application.conf
+++ b/conf/application.conf
@@ -218,6 +218,7 @@ play.filters {
 
   # Disabled filters remove elements from the enabled list.
   #disabled += filters.ExampleFilter
+  disabled += play.filters.csrf.CSRFFilter
 
   ## CORS filter configuration
   # https://www.playframework.com/documentation/latest/CorsFilter
@@ -245,13 +246,13 @@ play.filters {
   # The primary mechanism is a CSRF token. This token gets placed either in the query string
   # or body of every form submitted, and also gets placed in the users session.
   # Play then verifies that both tokens are present and match.
-  csrf {
+  #csrf {
     # Sets the cookie to be sent only over HTTPS
     #cookie.secure = true
 
     # Defaults to CSRFErrorHandler in the root package.
     #errorHandler = MyCSRFErrorHandler
-  }
+  #}
 
   ## Security headers filter configuration
   # https://www.playframework.com/documentation/latest/SecurityHeaders
