Refactoring of the TwitterController using proper DI, start implementing actors

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -21,7 +21,7 @@
 # ~~~~~
 # Play uses Akka internally and exposes Akka Streams and actors in Websockets and
 # other streaming HTTP responses.
-akka {
+#akka {
   # "akka.log-config-on-start" is extraordinarly useful because it log the complete
   # configuration at INFO level, including defaults and overrides, so it s worth
   # putting at the very top.
@@ -33,6 +33,19 @@ akka {
   # And then uncomment this line to debug the configuration.
   #
   #log-config-on-start = true
+#}
+akka {
+  loggers = ["akka.event.slf4j.Slf4jLogger"]
+  loglevel = "DEBUG"
+  logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
+  log-config-on-start = on
+  actor {
+    debug {
+      receive = on
+      autoreceive = on
+      lifecycle = on
+    }
+  }
 }
 
 ## Secret key
@@ -274,6 +287,7 @@ play.filters {
 
     # The Content-Security-Policy header. If null, the header is not set.
     #contentSecurityPolicy = "default-src 'self'"
+    contentSecurityPolicy = "connect-src 'self' ws://localhost:9000"
   }
 
   ## Allowed hosts filter configuration
@@ -284,6 +298,7 @@ play.filters {
   hosts {
     # Allow requests to example.com, its subdomains, and localhost:9000.
     #allowed = [".example.com", "localhost:9000"]
+    allowed = ["localhost:9000"]
   }
 }
 
